# swx

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config.cmake
boards/: SW22.h
include/swx/: channel.h  message.h  parameter.h  status.h  version.h
src/: analog_capture.c  analog_capture.h  audio.c  audio.h  channel.c  channel.cpp  channel.h  defaults.h  main.c  main.cpp  message.h  output.c  output.cpp  output.h  parameter.h  protocol.c  protocol.cpp  protocol.h  pulse_func_gen.cpp  pulse_func_gen.h  pulse_gen.c  pulse_gen.h  pulse_queue.cpp  pulse_queue.h  queued_dac.h  state.h  swx.h  trigger.c  trigger.h  util.cpp  util.h
src/comm/: cli.h  protocol.h
src/comms/: cli.cpp  cli.h  cli_hardware.cpp  cli_hardware.h
src/hardware/: adc.h  ads1015.c  ads1015.cpp  ads1015.h  dac.h  mcp4728.c  mcp4728.cpp  mcp4728.h  queued_dac.cpp  queued_dac.h
src/pio/: i2s.pio  pulse_gen.pio
src/util/: gpio.h  i2c.c  i2c.h
